--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,17 @@ Size=443,531
 Collapsed=0
 
 [Window][Emulator Data]
-Pos=60,60
-Size=879,565
+Pos=205,41
+Size=904,611
+Collapsed=0
+
+[Window][Register Dump]
+Pos=54,68
+Size=156,340
+Collapsed=0
+
+[Window][Instruction Memory]
+Pos=248,83
+Size=457,356
 Collapsed=0
 
