--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,130 @@ Size=904,611
 Collapsed=0
 
 [Window][Register Dump]
-Pos=54,68
-Size=156,340
+Pos=49,108
+Size=146,273
 Collapsed=0
 
 [Window][Instruction Memory]
-Pos=248,83
-Size=457,356
+Pos=263,103
+Size=415,381
 Collapsed=0
+
+[Window][Stack]
+Pos=52,467
+Size=168,230
+Collapsed=0
+
+[Window][OpenGL Texture Text]
+Pos=838,325
+Size=287,247
+Collapsed=0
+
+[Window][BitMap Render]
+Pos=268,509
+Size=256,195
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=22,16
+Size=491,624
+Collapsed=0
+
+[Window][tutorial]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=339,1001
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=274,475
+Size=456,156
+Collapsed=0
+
+[Window][Memory Viewer]
+Pos=715,34
+Size=341,665
+Collapsed=0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=132
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=138
+Column 1  Width=175
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x9DCC1AA7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
