1 more ARM till THUMB
more complete debugging information, more accurate disassembly, bitmap display.

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=195,108
 Size=400,400
 Collapsed=0
 
@@ -14,18 +14,18 @@ Size=904,611
 Collapsed=0
 
 [Window][Register Dump]
-Pos=49,108
-Size=146,273
+Pos=809,38
+Size=143,268
 Collapsed=0
 
 [Window][Instruction Memory]
-Pos=263,103
-Size=415,381
+Pos=15,408
+Size=500,377
 Collapsed=0
 
 [Window][Stack]
-Pos=52,467
-Size=168,230
+Pos=791,305
+Size=184,297
 Collapsed=0
 
 [Window][OpenGL Texture Text]
@@ -34,12 +34,12 @@ Size=287,247
 Collapsed=0
 
 [Window][BitMap Render]
-Pos=268,509
-Size=256,195
+Pos=13,29
+Size=501,358
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=22,16
+Pos=474,96
 Size=491,624
 Collapsed=0
 
@@ -59,8 +59,18 @@ Size=456,156
 Collapsed=0
 
 [Window][Memory Viewer]
-Pos=715,34
-Size=341,665
+Pos=530,32
+Size=266,543
+Collapsed=0
+
+[Window][Breakpoints]
+Pos=532,588
+Size=187,138
+Collapsed=0
+
+[Window][Title bar Hovered/Active tests]
+Pos=60,60
+Size=399,39
 Collapsed=0
 
 [Table][0xC9935533,3]
